Update E_4.영화리뷰 텍스트 감성분석하기.ipynb

--- a/E_03/E_4.영화리뷰 텍스트 감성분석하기.ipynb
+++ b/E_03/E_4.영화리뷰 텍스트 감성분석하기.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 네이버 영화리뷰 감성 분석\n",
-    "[데이터셋 링크](https://github.com/e9t/nsmc)\n",
+    "## 1. 3가지 모델을 사용하였는가? yes! cnn, gru, lstm 사용\n",
     "\n",
     "## 데이터 import"
    ]
