Update E_4.영화리뷰 텍스트 감성분석하기.ipynb

--- a/E_03/E_4.영화리뷰 텍스트 감성분석하기.ipynb
+++ b/E_03/E_4.영화리뷰 텍스트 감성분석하기.ipynb
@@ -8,8 +8,8 @@
     "## 1. 3가지 모델을 사용하였는가? yes! cnn, gru, lstm 사용\n",
     "## 2. gensim을 활용하여 자체 학습된 혹은 사전학습된 임베딩 레이어를 분석하였다! 한다고 했는데..훔훔훔..\n",
     "## 3. 한국어 word2Vec을 활용하여 가시적인 성능향상을 달성하였다. LSTM이 나를 구원했다.\n",
-    "### **회고**\n"
-    "#### RNN과 친해져야 할텐데..여긴어디 나는누구..인..경혐이 좋다..머신러닝을 하다보면 나란 존재란..참 tensor속에 있는 미물같다.\
+    "### **회고**\n",
+    "#### RNN과 친해져야 할텐데..여긴어디 나는누구..인..경혐이 좋다..머신러닝을 하다보면 나란 존재란..참 tensor속에 있는 미물같다.\n",
     
     "\n",
     "## 데이터 import"
