Update E_4.영화리뷰 텍스트 감성분석하기.ipynb

--- a/E_03/E_4.영화리뷰 텍스트 감성분석하기.ipynb
+++ b/E_03/E_4.영화리뷰 텍스트 감성분석하기.ipynb
@@ -9,7 +9,10 @@
     "## 2. gensim을 활용하여 자체 학습된 혹은 사전학습된 임베딩 레이어를 분석하였다! 한다고 했는데..훔훔훔..\n",
     "## 3. 한국어 word2Vec을 활용하여 가시적인 성능향상을 달성하였다. LSTM이 나를 구원했다.\n",
     "### **회고**\n",
-    "#### RNN과 친해져야 할텐데..여긴어디 나는누구..인..경혐이 좋다..머신러닝을 하다보면 나란 존재란..참 tensor속에 있는 미물같다.\n",
+    "RNN과 친해지기 1단계를 끝냈다. 아직 작동원리와 구현은 혼자 못하겠지만 불용어처리나 다양한 전처리를 통해서 모델이 능력이 향상된다는 것을 알게되었다. \n",
+    "보니깐 현재는 transformer도 생기고 아직 nlp task는 길이 길고 길어 보이지만! 그래도 오늘 이거 하나는 배웠다. \n",
+    "아직은 아는 것이 tensor속에 먼지만큼도 안되어 보이지만 이 과정이 끝나면 그래도 사람들이 무슨 말을 하는구나!!를 넘어~~~!! 나도 코드를 완전히 이해하고 구현할 수 있는 사람이 되고싶다!\n",
+    "오늘도 홧팅!\
     
     "\n",
     "## 데이터 import"
